src/tests/snapshots/nyx__tests__window_opening__check_target_size@fsF-dwP0.25-dhU-b.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    open-fullscreen false\n    default-column-width { proportion 0.25; }\n    default-window-height {  }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 312 × 0, bounds: 1272 × 712, states: []

post-map configures:
size: 312 × 0, bounds: 1272 × 712, states: [Activated]
